# cpp-piano-platform

./: CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  MidiParser.cpp  MidiParser.h  MidiPlayer.cpp  MidiPlayer.h  PianoKeyboardWidget.cpp  PianoKeyboardWidget.h  PianoRollWidget.cpp  PianoRollWidget.h  main.cpp
